--- a/src/frontend-js/index.html
+++ b/src/frontend-js/index.html
@@ -4,60 +4,72 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Laboratory Projects</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
     <script>
         function Update() {
-            //fetch(`http://192.168.1.9/projects/locate/`)
-            fetch(`demo.json`)
+            fetch("locate.php")
                 .then(response => response.json())
-                .then(data => addGroupedProjects(data))
+                .then(data => Object.entries(data)
+                    .map(([groupID, group]) => group)
+                    .sort((a, b) => a.title.localeCompare(b.title))
+                    .forEach(group => addGroup(group)))
+                .then(document.getElementById("spinner").remove());
         }
 
-        function addGroupedProjects(groupedProjects) {
-            Object.entries(groupedProjects).forEach(x => addGroup(x[0], x[1]));
-        }
+        function addGroup(group) {
+            const groupDiv = document.createElement("div");
 
-        function addGroup(groupPath, projects) {
-            const container = document.getElementById("project-list");
-            const heading = document.createElement("h1");
+            const heading = document.createElement("h3");
             heading.classList.add("mt-5");
-            heading.innerText = groupPath;
-            container.appendChild(heading);
-            const projectDivs = projects.map(project => getProjectDiv(project));
-            projectDivs.forEach(x => container.appendChild(x));
-        }
+            heading.innerHTML = group.title ? group.title : "<mark>no title</mark>";
+            groupDiv.appendChild(heading);
 
-        function makeElement(innerHTML = "", type = "div") {
-            const div = document.createElement(type);
-            div.innerHTML = innerHTML;
-            return div;
+            const descriptionDiv = document.createElement("div");
+            descriptionDiv.innerHTML = group.description ? group.description : "<mark>no description</mark>";
+            groupDiv.appendChild(descriptionDiv);
+
+            const pathDiv = document.createElement("div");
+            pathDiv.innerHTML = "<code>" + group.path + "</code>";
+            groupDiv.appendChild(pathDiv);
+
+            const projectsDiv = document.createElement("div");
+            groupDiv.appendChild(projectsDiv);
+
+            group.projects.forEach(x => projectsDiv.appendChild(getProjectDiv(x)));
+
+            const container = document.getElementById("project-list");
+            container.appendChild(groupDiv);
         }
 
         function getProjectDiv(project) {
-            const path = project["path"];
-            const title = project["title"];
-            const description = project["description"];
+            const projectDiv = document.createElement("div");
+            projectDiv.classList.add("card");
+            projectDiv.classList.add("my-4");
+            projectDiv.classList.add("shadow-sm");
 
-            const divTitle = makeElement(title);
-            divTitle.classList.add("fw-bold");
-            
-            const divPath = makeElement(`<code>${path}</code>`);
+            const cardTitleDiv = document.createElement("div");
+            cardTitleDiv.classList.add("card-header");
+            cardTitleDiv.classList.add("fw-bold");
+            cardTitleDiv.innerText = project.title;
+            projectDiv.appendChild(cardTitleDiv);
 
-            const divDescription = makeElement(description);
+            const cardBodyDiv = document.createElement("div");
+            cardBodyDiv.classList.add("card-body");
+            projectDiv.appendChild(cardBodyDiv);
 
-            const div = makeElement();
-            div.classList.add("border");
-            div.classList.add("rounded");
-            div.classList.add("bg-light");
-            div.classList.add("my-3");
-            div.classList.add("p-2");
-            div.appendChild(divTitle);
-            div.appendChild(divDescription);
-            div.appendChild(divPath);
-            return div;
+            const descriptionDiv = document.createElement("div");
+            descriptionDiv.innerText = project.description ? project.description : "no description";
+            cardBodyDiv.appendChild(descriptionDiv);
+
+            const pathDiv = document.createElement("div");
+            pathDiv.innerHTML = "<code>" + project.path + "</code>";
+            pathDiv.classList.add("mt-2");
+            cardBodyDiv.appendChild(pathDiv);
+
+            return projectDiv;
         }
 
     </script>
@@ -65,8 +77,42 @@
 
 <body>
 
-    <div class="container" id="project-list">
+    <div class="container">
 
+        <header class="mt-3">
+            <h1>
+                Laboratory Projects
+            </h1>
+
+            <div class="alert alert-primary d-inline-block mt-3 py-2 shadow-sm" role="alert">
+                <h4 class="alert-heading">
+                    Creating and Modifying Projects
+                </h4>
+                <ul class="my-2">
+                    <li>
+                        A project folder is any folder containing <code>project.txt</code>
+                    </li>
+                    <li>
+                        If a folder contains <code>project-group.txt</code>, all child projects will be grouped
+                        together
+                    </li>
+                    <li>
+                        In these text files the first line is the title and the rest is the description
+                    </li>
+                    <li>
+                        This page updates automatically so project folders can be moved anywhere
+                    </li>
+                </ul>
+            </div>
+        </header>
+
+        <div id="project-list">
+            <div class="text-center my-5" id="spinner">
+                <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script>Update();</script>
