--- a/src/frontend-js/index.html
+++ b/src/frontend-js/index.html
@@ -8,6 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
+    <style>
+        a {
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .badge a {
+            text-decoration: none;
+        }
+
+        .badge a:hover {
+            text-decoration: underline;
+        }
+    </style>
+
     <script>
         function Update() {
             fetch("locate.php")
@@ -65,11 +83,35 @@
             cardBodyDiv.appendChild(descriptionDiv);
 
             const pathDiv = document.createElement("div");
-            pathDiv.innerHTML = "<code>" + project.path + "</code>";
+            pathDiv.innerHTML = "<code>" + project.path + "</code> " +
+                //`<a href='#' class='badge rounded-pill text-bg-secondary'>copy</a> ` +
+                `<a href='http://192.168.1.9:5000/AbfFolder?folder=${project.path}' class='badge rounded-pill text-bg-primary'>abf</a> ` +
+                `<a href='http://192.168.1.9/X/${String(project.path).substring(2)}' class='badge rounded-pill text-bg-success'>web</a>`;
             pathDiv.classList.add("mt-2");
             cardBodyDiv.appendChild(pathDiv);
 
+            project.interesting.map(x => {
+                const fileDiv = document.createElement("div");
+                fileDiv.innerHTML = isLinkableFile(x)
+                    ? `<a href='${getXDriveUrl(x)}'><code>${x}</code></a>`
+                    : `<code>${x}</code>`;
+                cardBodyDiv.appendChild(fileDiv);
+            });
+
             return projectDiv;
+        }
+
+        function isLinkableFile(path) {
+            const s = String(path)
+            if (s.endsWith(".pdf")) return true;
+            if (s.endsWith(".html")) return true;
+            if (s.endsWith(".png")) return true;
+            if (s.endsWith(".jpg")) return true;
+            return false;
+        }
+
+        function getXDriveUrl(path) {
+            return "http://192.168.1.9/X/" + String(path).substr(2);
         }
 
     </script>
